
    o add a new function `snpgdsPairScore()`

    o improve `snpgdsGRM()`

    o support the SeqArray data format (requiring SeqArray >= v1.9.2)

    o modification according to gdsfmt_1.5.7

    o bug fix in `snpgdsLDMat()` when genotype data are from SeqArray

    o bug fix: https://github.com/zhengxwen/SNPRelate/issues/14

    o `snpgdsLDMat()` supports multiple threads and covariance

    o `snpgdsPCA()`: non-computed eigenvalues are NaN to avoid misuse of 'eigenval' when `eigen.method="DSPEVX"`


CHANGES IN VERSION 1.2.0
-------------------------

    o The version number was bumped for the Bioconductor release version


CHANGES IN VERSION 1.1.0-1.1.11
-------------------------

    o fix a bug in `snpgdsVCF2GDS()` when 'method="biallelic.only"'

    o add `snpgdsVCF2GDS_R()` for the R implementation

    o fix a bug in `snpgdsBED2GDS()` if 'family=TRUE'

    o `snpgdsGDS2BED()` allows the file name of GDS

    o improve `snpgdsSlidingWindow()`

    o add an option 'ignore.chr.prefix' to the function `snpgdsVCF2GDS()`

    o a new function `snpgdsHWE()`

    o v1.1.5: add "Fst estimation" to the vignette

    o v1.1.6: bug fix if `requireNamespace("SNPRelate")` is called from
      other packages

    o v1.1.7: `snpgdsPCA()` uses 'DSPEVX' to compute eigenvalues and
      eigenvectors instead of 'DSPEV' if top eigenvalues are required only
      (significant improvement on computing speed)

    o v1.1.8: the original Rnw vignette is replaced by a R Markdown vignette

    o v1.1.9: a new function `snpgdsPED2GDS()`


CHANGES IN VERSION 1.0.0
-------------------------

    o The version number was bumped for the Bioconductor release version


CHANGES IN VERSION 0.99.1-0.99.3
-------------------------

    o an option to create an integer snp.id when converting from PLINK

    o a new function `snpgdsFst()` to estimate Fst

    o minor fixes


CHANGES IN VERSION 0.99.0
-------------------------

    o be a Bioconductor package
